<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/add"
          android:title="@string/add"
    	  android:icon="@android:drawable/ic_menu_add"
          android:visible="true"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/discover"
    	  android:icon="@android:drawable/ic_menu_search"
          android:title="@string/discover"
          android:visible="true"
          android:showAsAction="ifRoom|withText"
           />
    <item android:id="@+id/clear"
          android:title="@string/clear"
    	  android:icon="@drawable/ic_menu_clear_playlist"
          android:checkable="false" 
          android:checked="false"
          android:visible="true"
          android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/burst"
          android:title="@string/burst"
    	  android:icon="@drawable/ic_menu_burst"
          android:checkable="true" 
          android:checked="false"
          android:visible="true"
          android:showAsAction="withText" />

    <item android:id="@+id/config"
          android:title="@string/config"
    	  android:icon="@android:drawable/ic_menu_manage"
          android:visible="true"
          android:showAsAction="withText"/>           
</menu>
