<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
 >
  	<LinearLayout
  		android:id="@+id/layout"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
  	>
    <Spinner 
    	android:id="@+id/uri" 
	    android:textAppearance="?android:attr/textAppearanceSmall" 
    	android:layout_width="0dip" 
    	android:layout_weight="3"
    	android:layout_height="match_parent"/>
    <ToggleButton 
    	android:id="@+id/active" 
	    android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:textOn="@string/connection" 
    	android:textOff="@string/connection" 
    	android:layout_width="wrap_content" android:layout_height="match_parent"/>
  	</LinearLayout>
    <Button 
    	android:id="@+id/install" 
	    android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_below="@+id/layout"
    	android:text="@string/install"/>
    <ToggleButton 
    	android:id="@+id/bind" 
	    android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_toRightOf="@+id/install" 
    	android:layout_alignTop="@+id/install" 
    	android:layout_alignBottom="@+id/install"
    	android:textOn="@string/bind" 
    	android:textOff="@string/bind" 
    	/>
    <Button 
    	android:id="@+id/invoke" 
	    android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_toRightOf="@+id/bind" 
    	android:layout_alignTop="@+id/install" 
    	android:layout_alignBottom="@+id/install"
    	android:text="@string/invoke"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/install"
        android:layout_alignRight="@+id/cmds"
        android:layout_below="@+id/install"
        android:ellipsize="marquee"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<View
	    android:id="@+id/divider"
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:layout_alignParentLeft="true"
        android:layout_marginBottom="3dp"
	    android:layout_below="@+id/status"
	    android:background="@android:color/white" />

</RelativeLayout>
